<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnAppBubbleAlertView"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:layout_height="wrap_content"
        android:text="@string/btn_bubble_alert_view" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnAppLoginA"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_marginTop="@dimen/dimen_10_dp"
        android:textColor="@color/colorWhite"
        android:layout_height="wrap_content"
        android:text="@string/btn_login_a" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnAppLoginB"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_marginTop="@dimen/dimen_10_dp"
        android:textColor="@color/colorWhite"
        android:layout_height="wrap_content"
        android:text="@string/btn_login_b" />

</LinearLayout>
