<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:gravity="bottom"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dimen_20_dp"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edtEmailLogin"
                android:layout_width="match_parent"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorWhite"
                android:padding="@dimen/dimen_15_dp"
                android:maxLines="1"
                android:textColorHint="@color/colorEditHint"
                android:background="@drawable/border_edittext"
                android:textSize="@dimen/dimen_17_sp"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edtPasswordLogin"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dimen_30_dp"
                android:hint="@string/hint_password"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorEditHint"
                android:paddingLeft="@dimen/dimen_15_dp"
                android:paddingRight="@dimen/dimen_80_dp"
                android:paddingTop="@dimen/dimen_15_dp"
                android:paddingBottom="@dimen/dimen_15_dp"
                android:textSize="@dimen/dimen_17_sp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:background="@drawable/border_edittext"
                android:layout_height="wrap_content" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_alignLeft="@+id/edtPasswordLogin"
                    android:textSize="@dimen/dimen_17_sp"
                    android:gravity="right|bottom"
                    android:layout_marginTop="45dp"
                    android:layout_alignRight="@+id/edtPasswordLogin"
                    android:paddingRight="@dimen/dimen_15_dp"
                    android:textColor="@color/colorSignUpLink"
                    android:text="@string/label_forgot"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/btnLogin"
                android:layout_width="120dp"
                app:srcCompat="@mipmap/ic_next"
                android:padding="@dimen/dimen_7_dp"
                android:layout_marginTop="@dimen/dimen_30_dp"
                android:layout_gravity="right"
                android:background="@drawable/border_round_corner_button"
                android:layout_height="45dp" />

            <include
                layout="@layout/include_sign_social"/>
        </LinearLayout>

    </ScrollView>


</LinearLayout>